recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value step
  if (step==0){
      ^Tree:7: error: not found: value currentstep
    currentstep(steps)
    ^